[package]
name = "mystic_light_sdk"
version = "0.2.3"
edition = "2021"
authors = ["meskill"]
description = "A Rust wrapper for the MysticLight SDK (MSI hardware and peripherals)"
homepage = "https://github.com/meskill/mystic-light-sdk"
repository = "https://github.com/meskill/mystic-light-sdk"
license = "Apache-2.0"
keywords = ["mystic-light", "sdk", "rgb", "rgb-led"]
categories = ["api-bindings"]
include = ["/src/**", "/examples/**", "build.rs", "README.md", "CHANGELOG.md"]

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"

[dependencies]
custom_error = "1.9.2"
libloading = "0.7.3"
oaidl = "0.2.1"
serde = { version="1.0.137", optional=true, features=["derive"] }
widestring = "0.4.3" # version compatible with `oaidl`
winapi = { version = "0.3.9" }

[dev-dependencies]
serde_json = { version="1.0.81" }

[build-dependencies]
copy_dir = "0.1.2"

[features]
serde = ["dep:serde"]

[[example]]
name = "serde_serialization"
required-features = ["serde"]
